<resources>
    <string name="app_name">FoodRunner</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_name">Name (Min. 3 characters)</string>
    <string name="address">Delivery Address</string>
    <string name="choose_password">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Register</string>
    <string name="home">Home</string>
    <string name="offers">New Offers</string>
    <string name="my_profile">My Profile</string>
    <string name="about_us">About Me</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Log out</string>
    <string name="cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history">Order History</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="filter">Filter</string>
    <string name="restaurant_name">Restaurant</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="profile_details">Your Profile Details are listed below:</string>
    <string name="go_to_cart">Proceed to Cart</string>
    <string name="confirm_order">Place Order</string>
    <string name="action_search">Search</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="favorites">Favorite Restaurants</string>
    <string name="channel_name">Android Training</string>
    <string name="channel_description">This notification confirms that the order is placed</string>
    <string name="dummy_phone">+91-1234567890</string>
    <string name="empty_cart">Your cart is currently empty</string>
    <string name="no_favorites">You do not have any favorite restaurants</string>
    <string name="no_orders">You haven\'t placed any orders yet</string>
    <string name="faq_answer_one">A.1 You will be taught using pre-recorded videos and text tutorials. The training has
        quizzes, assignments, and tests to help you learn better. At the end of the training, you will attempt a project
        to get hands-on practice of what you learn during your training.
    </string>
    <string name="faq_answer_two">A.2 As this is a purely online training program, you can choose to learn at any time
        of the day. We will recommend a pace to be followed throughout the program, but the actual timings and learning
        hours can be decided by students according to their convenience.
    </string>
    <string name="faq_answer_four">A.4 We recommend spending 10-12 hours per week. However, the actual learning hours
        can be decided by you as per your convenience.
    </string>
    <string name="faq_answer_three">A.3 The training duration is of 6 weeks.</string>
    <string name="faq_answer_five">A.5 You can choose your preferred batch date while signing up for the training
        program.
    </string>
    <string name="faq_answer_six">A.6 You will be able to download the certificate once you complete your training and
        take the final test.
    </string>
    <string name="register_yourself">
        <u>Don\'t have an account? Sign up now</u>
    </string>
    <string name="forgot_password">
        <u>Forgot Password?</u>
    </string>
    <string name="email">Email Address</string>
    <string name="enter_mobile_forgot_password">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="enter_otp">Enter the received OTP below</string>
    <string name="otp">OTP (4 characters)</string>
    <string name="new_password">New Password (Min. 4 characters)</string>
    <string name="submit">Submit</string>
    <string name="order_placed">Your order has been successfully placed!</string>
    <string name="order_history_static_text">Your previous orders are listed below :</string>
    <string name="dummy_date">20/12/2018</string>
    <string name="q_5">Q.5 How can I be sure that my information in this app is safe?</string>
    <string name="q_1">Q.1 How does this app work?</string>
    <string name="a_1_this_app_fetches_out_the_nearby_restaurants_and_their_menu_using_device_location_and_displays_to_the_user_the_user_needs_to_select_the_restraunts_and_order_food_from_the_menu">A.1 This app fetches out the nearby restaurants and their menu using device location and displays to the user. The user needs to select the restraunts and order food from the menu.</string>
    <string name="q_2_how_to_pay_the_bills">Q.2 How to pay the bills?</string>
    <string name="a_2_bills_can_be_paid_either_online_depending_on_your_choice_in_onilne_payment_payment_can_be_done_through_your_debit_credit_card_paytm_googlepay_etc">A.2 Bills can be paid either online depending on your choice. In onilne payment, payment can be done through your debit/credit card, Paytm, GooglePay etc.</string>
    <string name="q_3_what_is_the_duration_of_delivering_the_order">Q.3 What is the duration of delivering the order?</string>
    <string name="a_3_maximum_duration_for_delivery_is_45_minutes">A.3 Maximum duration for delivery is 45 minutes.</string>
    <string name="q_4_what_if_food_is_not_delivered_on_time">Q.4 What if food is not delivered on time?</string>
    <string name="a_4_if_the_food_is_not_delivered_in_time_you_will_be_refunded_although_it_depends_how_much_far_the_restraunt_is">A.4 If the food is not delivered in time, you will be refunded. Although it depends how much far the restraunt is</string>
    <string name="your_information_is_secured_inside_your_device_itself_as_it_uses_device_database_to_store_the_data">Your information is secured inside your device itself as it uses device database to store the data.</string>
    <string name="q_6_does_this_app_really_helps_in_ordering_food_online">Q.6 Does this app really helps in ordering food online?</string>
    <string name="this_is_just_a_demo_app_and_does_not_really_work_for_ordering_food">This is just a demo app and does not really work for ordering food.</string>
    <array name="filters">
        <item>Cost(Low to High)</item>
        <item>Cost(High to Low)</item>
        <item>Rating</item>
    </array>

</resources>
