<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FAQFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_1"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_1_this_app_fetches_out_the_nearby_restaurants_and_their_menu_using_device_location_and_displays_to_the_user_the_user_needs_to_select_the_restraunts_and_order_food_from_the_menu"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_2_how_to_pay_the_bills"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_2_bills_can_be_paid_either_online_depending_on_your_choice_in_onilne_payment_payment_can_be_done_through_your_debit_credit_card_paytm_googlepay_etc"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_3_what_is_the_duration_of_delivering_the_order"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_3_maximum_duration_for_delivery_is_45_minutes"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_4_what_if_food_is_not_delivered_on_time"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_4_if_the_food_is_not_delivered_in_time_you_will_be_refunded_although_it_depends_how_much_far_the_restraunt_is"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_5"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_information_is_secured_inside_your_device_itself_as_it_uses_device_database_to_store_the_data"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_6_does_this_app_really_helps_in_ordering_food_online"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_is_just_a_demo_app_and_does_not_really_work_for_ordering_food"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>

    </ScrollView>
</FrameLayout>